--- a/node2vec_embed.ipynb
+++ b/node2vec_embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "filea = open(\"data/X_train.txt\")\n",
     "x_train = filea.readlines()\n",
+    "# print(x_train[0].split()[0].split(\",\")[0])\n",
     "fileb = open(\"data/y_train.txt\")\n",
     "y_train = fileb.readlines()\n",
     "\n",
@@ -92,18 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('G205', 'D47', '0')\n"
+     ]
+    }
+   ],
    "source": [
     "# train set\n",
     "train = []\n",
     "for i in range(len(x_train)):\n",
-    "        tup1 = (x_train[i].split()[0].split(\",\")[0],)\n",
-    "        tup2 = (x_train[i].split()[0].split(\",\")[1],)\n",
-    "        tup3 = (y_train[i].split()[0],)\n",
+    "        tup1 = (x_train[i].split()[0].split(\",\")[0],) #G123\n",
+    "        tup2 = (x_train[i].split()[0].split(\",\")[1],) #D123\n",
+    "        tup3 = (y_train[i].split()[0],)               #1/0\n",
     "        tup4 = tup1 + tup2 + tup3\n",
-    "        train.append(tup4) \n",
+    "        # print(tup4)\n",
+    "        train.append(tup4)\n",
+    "print(train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# test set      \n",
     "test = []\n",
     "for i in range(len(X_test)):\n",
@@ -116,27 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 2031 nodes and 178880 edges\n",
-      "Before: 2031 178880\n",
-      "After: 2031 5676\n"
+      "Graph with 1217 nodes and 217000 edges\n",
+      "Before: 1217 217000\n",
+      "After: 1217 5696\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "873438a7e0cf457596471371f6dee761",
+       "model_id": "9d1f6adce81c4c9ebddf1b69adf92bf6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Computing transition probabilities:   0%|          | 0/2031 [00:00<?, ?it/s]"
+       "Computing transition probabilities:   0%|          | 0/1217 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -152,7 +171,7 @@
    ],
    "source": [
     "#embedding the 3 graphs: gd, gld, gmd\n",
-    "graph_name = 'gld'\n",
+    "graph_name = 'gda'\n",
     "\n",
     "gda_graph = nx.read_weighted_edgelist('data/'+graph_name+'.edgelist',delimiter=\"\\t\")  \n",
     "print(gda_graph)\n",
@@ -170,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +202,9 @@
     "for dis in doidx:\n",
     "    gd_d_vec[dis]=model.wv.get_vector(dis)  \n",
     "\n",
-    "gd_l_vec={}\n",
-    "for lnc in lncidx:\n",
-    "    gd_l_vec[lnc] = model.wv.get_vector(lnc)\n",
+    "# gd_l_vec={}\n",
+    "# for lnc in lncidx:\n",
+    "#     gd_l_vec[lnc] = model.wv.get_vector(lnc)\n",
     "\n",
     "# gd_m_vec = {}\n",
     "# for mi in miidx:\n",
