--- a/attenetion_prediction.ipynb
+++ b/attenetion_prediction.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\Desktop\\gene disease prediction\\DisGeneGraph\\DGGN\\util.py:4: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:108: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -55,9 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((9112, 1), (2280, 1))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_train=open('./data/y_train.txt').read().split('\\n')[:-1] \n",
     "y_train=[int(y) for y in y_train]\n",
@@ -323,9 +348,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:deeplearn] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-deeplearn-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -337,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
