preproccessed gene-gene & disease-disease network data

--- a/create_train_test_data.ipynb
+++ b/create_train_test_data.ipynb
@@ -16,236 +16,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before: 3693 595954\n",
-      "After: 3693 85836\n",
-      "Before: 3693 595954\n",
-      "After: 3693 510118\n"
+      "Before: 1217 675456\n",
+      "After: 1217 271086\n",
+      "Before: 1217 675456\n",
+      "After: 1217 404370\n"
      ]
     }
    ],
    "source": [
-    "gmd_graph_positive_weights = nx.read_weighted_edgelist('data/gmd.edgelist',delimiter=\"\\t\")\n",
-    "gmd_graph_negative_weights = nx.read_weighted_edgelist('data/gmd.edgelist',delimiter=\"\\t\")\n",
+    "gg_dd_graph_positive_weights = nx.read_weighted_edgelist('data/gg_dd_edges.edgelist',delimiter=\"\\t\")\n",
+    "gg_dd_graph_negative_weights = nx.read_weighted_edgelist('data/gg_dd_edges.edgelist',delimiter=\"\\t\")\n",
     "\n",
-    "print(\"Before:\",gmd_graph_positive_weights.number_of_nodes(),gmd_graph_positive_weights.number_of_edges())\n",
-    "for edge in list(gmd_graph_positive_weights.edges):\n",
-    "    if gmd_graph_positive_weights.get_edge_data(edge[0],edge[1])['weight']<=0.0:\n",
-    "        gmd_graph_positive_weights.remove_edge(edge[0],edge[1])\n",
-    "print(\"After:\",gmd_graph_positive_weights.number_of_nodes(),gmd_graph_positive_weights.number_of_edges())\n",
+    "print(\"Before:\",gg_dd_graph_positive_weights.number_of_nodes(),gg_dd_graph_positive_weights.number_of_edges())\n",
+    "for edge in list(gg_dd_graph_positive_weights.edges):\n",
+    "    if gg_dd_graph_positive_weights.get_edge_data(edge[0],edge[1])['weight']<0.4:\n",
+    "        gg_dd_graph_positive_weights.remove_edge(edge[0],edge[1])\n",
+    "print(\"After:\",gg_dd_graph_positive_weights.number_of_nodes(),gg_dd_graph_positive_weights.number_of_edges())\n",
     "\n",
-    "print(\"Before:\",gmd_graph_negative_weights.number_of_nodes(),gmd_graph_negative_weights.number_of_edges())\n",
-    "for edge in list(gmd_graph_negative_weights.edges):\n",
-    "    if gmd_graph_negative_weights.get_edge_data(edge[0],edge[1])['weight']>0.0:\n",
-    "        gmd_graph_negative_weights.remove_edge(edge[0],edge[1])\n",
-    "print(\"After:\",gmd_graph_negative_weights.number_of_nodes(),gmd_graph_negative_weights.number_of_edges())"
+    "print(\"Before:\",gg_dd_graph_negative_weights.number_of_nodes(),gg_dd_graph_negative_weights.number_of_edges())\n",
+    "for edge in list(gg_dd_graph_negative_weights.edges):\n",
+    "    if gg_dd_graph_negative_weights.get_edge_data(edge[0],edge[1])['weight']>=0.4:\n",
+    "        gg_dd_graph_negative_weights.remove_edge(edge[0],edge[1])\n",
+    "print(\"After:\",gg_dd_graph_negative_weights.number_of_nodes(),gg_dd_graph_negative_weights.number_of_edges())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            0     1  2\n",
-      "0          G1    M1  1\n",
-      "1          G1    M2  1\n",
-      "2          G1    M3  1\n",
-      "3          G1    M4  1\n",
-      "4          G1    M5  1\n",
-      "...       ...   ... ..\n",
-      "595949  M2472  D217  0\n",
-      "595950  M2473  D217  0\n",
-      "595951  M2474  D217  0\n",
-      "595952  M2475  D217  0\n",
-      "595953  M2476  D217  0\n",
+      "            0     1         2\n",
+      "0          G1    D1  1.000000\n",
+      "1          G1    D2  1.000000\n",
+      "2          G1    D3  0.000000\n",
+      "3          G1    D4  0.000000\n",
+      "4          G1    D5  1.000000\n",
+      "...       ...   ...       ...\n",
+      "1132690  D217  D211  0.054521\n",
+      "1132691  D217  D212  0.026878\n",
+      "1132692  D217  D214  0.028294\n",
+      "1132693  D217  D216  0.041172\n",
+      "1132694  D217  D217  1.000000\n",
       "\n",
-      "[595954 rows x 3 columns]\n"
+      "[1132695 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('data/gmd.edgelist', delimiter='\\t', index_col=None, header=None)\n",
+    "df = pd.read_csv('data/gg_dd_edges.edgelist', delimiter='\\t', index_col=None, header=None)\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          0     1  2\n",
-      "0        G1    M1  1\n",
-      "1        G1    M2  1\n",
-      "2        G1    M3  1\n",
-      "3        G1    M4  1\n",
-      "4        G1    M5  1\n",
-      "...     ...   ... ..\n",
-      "85831  M403  D215  1\n",
-      "85832  M636  D216  1\n",
-      "85833    M2  D217  1\n",
-      "85834   M11  D217  1\n",
-      "85835  M780  D217  1\n",
+      "           0     1         2\n",
+      "0         G1    D1  1.000000\n",
+      "1         G1    D2  1.000000\n",
+      "2         G1    D5  1.000000\n",
+      "3         G1    D6  1.000000\n",
+      "4         G1    D7  1.000000\n",
+      "...      ...   ...       ...\n",
+      "535254  D217   D31  0.838709\n",
+      "535255  D217   D60  0.564516\n",
+      "535256  D217  D119  0.402632\n",
+      "535257  D217  D196  0.458801\n",
+      "535258  D217  D217  1.000000\n",
       "\n",
-      "[85836 rows x 3 columns]\n",
-      "            0     1  2\n",
-      "0          M1    D1  0\n",
-      "1          M2    D1  0\n",
-      "2          M3    D1  0\n",
-      "3          M4    D1  0\n",
-      "4          M5    D1  0\n",
-      "...       ...   ... ..\n",
-      "510113  M2472  D217  0\n",
-      "510114  M2473  D217  0\n",
-      "510115  M2474  D217  0\n",
-      "510116  M2475  D217  0\n",
-      "510117  M2476  D217  0\n",
+      "[535259 rows x 3 columns]\n",
+      "           0     1         2\n",
+      "0         G1    D3  0.000000\n",
+      "1         G1    D4  0.000000\n",
+      "2         G1    D9  0.000000\n",
+      "3         G1   D14  0.000000\n",
+      "4         G1   D15  0.000000\n",
+      "...      ...   ...       ...\n",
+      "597431  D217  D210  0.184015\n",
+      "597432  D217  D211  0.054521\n",
+      "597433  D217  D212  0.026878\n",
+      "597434  D217  D214  0.028294\n",
+      "597435  D217  D216  0.041172\n",
       "\n",
-      "[510118 rows x 3 columns]\n"
+      "[597436 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "positive_samples = df[df[2] > 0].reset_index(drop=True)\n",
-    "negative_samples = df[df[2] <= 0].reset_index(drop=True)\n",
+    "positive_samples = df[df[2] >= 0.4].reset_index(drop=True)\n",
+    "negative_samples = df[df[2] < 0.4].reset_index(drop=True)\n",
     "print(positive_samples)\n",
     "print(negative_samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           0      1  2\n",
-      "0      M2013    D27  1\n",
-      "1       G602  M1269  1\n",
-      "2       G631   M635  1\n",
-      "3       G414   M369  1\n",
-      "4       G910   M871  1\n",
-      "...      ...    ... ..\n",
-      "85831  M2121    D77  1\n",
-      "85832   G559   M737  1\n",
-      "85833   G601  M1366  1\n",
-      "85834   G330   M468  1\n",
-      "85835  M1482   D110  1\n",
+      "            0     1\n",
+      "0        G199  G724\n",
+      "1        G432  G294\n",
+      "2         D16   D49\n",
+      "3        G695   D40\n",
+      "4        G247  G350\n",
+      "...       ...   ...\n",
+      "1070513   G30  G746\n",
+      "1070514  G723  D139\n",
+      "1070515  G863  G848\n",
+      "1070516  G416  G764\n",
+      "1070517   G91   G83\n",
       "\n",
-      "[85836 rows x 3 columns]\n",
-      "           0     1  2\n",
-      "0       M554   D94  0\n",
-      "1      M1896  D214  0\n",
-      "2       M895   D86  0\n",
-      "3       M851  D159  0\n",
-      "4       M685   D82  0\n",
-      "...      ...   ... ..\n",
-      "85831  M1519   D16  0\n",
-      "85832  M2319  D175  0\n",
-      "85833  M2043  D132  0\n",
-      "85834   M470  D181  0\n",
-      "85835   M646  D217  0\n",
+      "[1070518 rows x 2 columns]\n",
+      "                2\n",
+      "0        0.237600\n",
+      "1        0.254833\n",
+      "2        0.024567\n",
+      "3        0.000000\n",
+      "4        0.378773\n",
+      "...           ...\n",
+      "1070513  0.417500\n",
+      "1070514  0.000000\n",
+      "1070515  0.538182\n",
+      "1070516  0.131000\n",
+      "1070517  0.421467\n",
       "\n",
-      "[85836 rows x 3 columns]\n"
+      "[1070518 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
     "min_count = min(len(positive_samples), len(negative_samples))\n",
-    "positive_samples_balanced = positive_samples.sample(n=min_count, random_state=12, ignore_index = True)\n",
-    "negative_samples_balanced = negative_samples.sample(n=min_count, random_state=12, ignore_index = True)\n",
-    "print(positive_samples_balanced)\n",
-    "print(negative_samples_balanced)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            0      1  2\n",
-      "0       M1455    D71  0\n",
-      "1        M746   D165  0\n",
-      "2        G246   M410  1\n",
-      "3        G597   M118  1\n",
-      "4        G448   M410  1\n",
-      "...       ...    ... ..\n",
-      "171667   M330    D69  1\n",
-      "171668    M42    D11  0\n",
-      "171669   G464   M115  1\n",
-      "171670   G449  M1909  1\n",
-      "171671  M1738   D131  0\n",
-      "\n",
-      "[171672 rows x 3 columns]\n"
-     ]
-    }
-   ],
-   "source": [
+    "positive_samples_balanced = positive_samples.sample(n=min_count, random_state=21, ignore_index = True)\n",
+    "negative_samples_balanced = negative_samples.sample(n=min_count, random_state=21, ignore_index = True)\n",
     "balanced_dataset = pd.concat([positive_samples_balanced, negative_samples_balanced])\n",
-    "balanced_dataset = balanced_dataset.sample(frac=1, random_state=12).reset_index(drop=True)\n",
-    "print(balanced_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            0      1\n",
-      "0       M1455    D71\n",
-      "1        M746   D165\n",
-      "2        G246   M410\n",
-      "3        G597   M118\n",
-      "4        G448   M410\n",
-      "...       ...    ...\n",
-      "171667   M330    D69\n",
-      "171668    M42    D11\n",
-      "171669   G464   M115\n",
-      "171670   G449  M1909\n",
-      "171671  M1738   D131\n",
-      "\n",
-      "[171672 rows x 2 columns]\n",
-      "        2\n",
-      "0       0\n",
-      "1       0\n",
-      "2       1\n",
-      "3       1\n",
-      "4       1\n",
-      "...    ..\n",
-      "171667  1\n",
-      "171668  0\n",
-      "171669  1\n",
-      "171670  1\n",
-      "171671  0\n",
-      "\n",
-      "[171672 rows x 1 columns]\n"
-     ]
-    }
-   ],
-   "source": [
+    "balanced_dataset = balanced_dataset.sample(frac=1, random_state=21).reset_index(drop=True)\n",
     "x = balanced_dataset[[0,1]]\n",
     "y = balanced_dataset[[2]]\n",
     "print(x)\n",
@@ -254,11 +179,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes with less than 2 samples: (1864,)\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, stratify=y)\n",
+    "y_threshold = y[y<=0.4]\n",
+    "unique_classes, class_counts = np.unique(y_threshold, return_counts=True)\n",
+    "\n",
+    "# Find classes with fewer than 2 samples\n",
+    "classes_with_less_than_2_samples = unique_classes[class_counts < 2]\n",
+    "\n",
+    "print(\"Classes with less than 2 samples:\", classes_with_less_than_2_samples.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1070518, 2) (1070518, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068161, 2) (1068161, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_classes, class_counts = np.unique(y, return_counts=True)\n",
+    "\n",
+    "# Find classes with fewer than 2 samples\n",
+    "classes_with_less_than_2_samples = unique_classes[class_counts < 2]\n",
+    "\n",
+    "# Filter out samples corresponding to these classes\n",
+    "valid_indices = ~np.isin(y, classes_with_less_than_2_samples)\n",
+    "X_filtered = x[valid_indices]\n",
+    "y_filtered = y[valid_indices]\n",
+    "print(X_filtered.shape, y_filtered.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068654, 2) (1068654, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_classes, class_counts = np.unique(y, return_counts=True)\n",
+    "\n",
+    "# Find classes with fewer than 2 samples\n",
+    "classes_with_less_than_2_samples = unique_classes[class_counts < 2]\n",
+    "\n",
+    "# Filter out samples corresponding to these classes\n",
+    "valid_indices = ~np.isin(y, classes_with_less_than_2_samples)\n",
+    "X_filtered = x[valid_indices]\n",
+    "y_filtered = y[valid_indices]\n",
+    "print(X_filtered.shape, y_filtered.shape)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_filtered, y_filtered, test_size=0.2, stratify=y_filtered)\n",
     "X_train = X_train.reset_index(drop=True)\n",
     "X_test = X_test.reset_index(drop=True)\n",
     "y_train = y_train.reset_index(drop=True)\n",
@@ -267,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv('data/balanced data/x_train_gmd.txt', sep=',', header=False, index=False)\n",
-    "y_train.to_csv('data/balanced data/y_train_gmd.txt', header=False, index=False)\n",
-    "X_test.to_csv('data/balanced data/x_test_gmd.txt', sep=',', header=False, index=False)\n",
-    "y_test.to_csv('data/balanced data/y_test_gmd.txt', header=False, index=False)"
+    "X_train.to_csv('data/balanced data/x_train_gg_dd_0.4th.txt', sep=',', header=False, index=False)\n",
+    "y_train.to_csv('data/balanced data/y_train_gg_dd_0.4th.txt', header=False, index=False)\n",
+    "X_test.to_csv('data/balanced data/x_test_gg_dd_0.4th.txt', sep=',', header=False, index=False)\n",
+    "y_test.to_csv('data/balanced data/y_test_gg_dd_0.4th.txt', header=False, index=False)"
    ]
   },
   {
