--- a/node2vec_embed.ipynb
+++ b/node2vec_embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,54 +54,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 3693 nodes and 595954 edges\n",
-      "Before: 3693 595954\n",
-      "After: 3693 85836\n"
+      "Graph with 1217 nodes and 675456 edges\n",
+      "Before: 1217 675456\n",
+      "After: 1217 271086\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af3fc9ce9e0a4c80aa15321af0b0abdb",
+       "model_id": "57aba09a38cd431dbb0892e767a2ee83",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Computing transition probabilities:   0%|          | 0/3693 [00:00<?, ?it/s]"
+       "Computing transition probabilities:   0%|          | 0/1217 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished!\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m         gg_dd_edges_graph\u001b[38;5;241m.\u001b[39mremove_edge(edge[\u001b[38;5;241m0\u001b[39m],edge[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter:\u001b[39m\u001b[38;5;124m\"\u001b[39m,gg_dd_edges_graph\u001b[38;5;241m.\u001b[39mnumber_of_nodes(),gg_dd_edges_graph\u001b[38;5;241m.\u001b[39mnumber_of_edges())\n\u001b[1;32m---> 13\u001b[0m node2vec \u001b[38;5;241m=\u001b[39m \u001b[43mNode2Vec\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgg_dd_edges_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdimensions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwalk_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_walks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mworkers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[0;32m     14\u001b[0m model \u001b[38;5;241m=\u001b[39m node2vec\u001b[38;5;241m.\u001b[39mfit(window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, min_count\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, batch_words\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfinished!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\node2vec\\node2vec.py:73\u001b[0m, in \u001b[0;36mNode2Vec.__init__\u001b[1;34m(self, graph, dimensions, walk_length, num_walks, p, q, weight_key, workers, sampling_strategy, quiet, temp_folder, seed)\u001b[0m\n\u001b[0;32m     70\u001b[0m     random\u001b[38;5;241m.\u001b[39mseed(seed)\n\u001b[0;32m     71\u001b[0m     np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mseed(seed)\n\u001b[1;32m---> 73\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_precompute_probabilities\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwalks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generate_walks()\n",
+      "File \u001b[1;32mc:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\node2vec\\node2vec.py:134\u001b[0m, in \u001b[0;36mNode2Vec._precompute_probabilities\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    131\u001b[0m     \u001b[38;5;66;03m# Normalize\u001b[39;00m\n\u001b[0;32m    132\u001b[0m     unnormalized_weights \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(unnormalized_weights)\n\u001b[0;32m    133\u001b[0m     d_graph[current_node][\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROBABILITIES_KEY][\n\u001b[1;32m--> 134\u001b[0m         source] \u001b[38;5;241m=\u001b[39m unnormalized_weights \u001b[38;5;241m/\u001b[39m \u001b[43munnormalized_weights\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msum\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;66;03m# Calculate first_travel weights for source\u001b[39;00m\n\u001b[0;32m    137\u001b[0m first_travel_weights \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[1;32mc:\\Users\\Omkar Sathe\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\core\\_methods.py:48\u001b[0m, in \u001b[0;36m_sum\u001b[1;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_sum\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, out\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, keepdims\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m     47\u001b[0m          initial\u001b[38;5;241m=\u001b[39m_NoValue, where\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m---> 48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m umr_sum(a, axis, dtype, out, keepdims, initial, where)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "#embedding the 3 graphs: gd, gmd, gmd\n",
-    "graph_name = 'gmd'\n",
+    "#embedding the 3 graphs: gd, gg_dd_edges, gg_dd_edges\n",
+    "graph_name = 'gg_dd_edges'\n",
     "\n",
-    "gmd_graph = nx.read_weighted_edgelist('data/'+graph_name+'.edgelist',delimiter=\"\\t\")  \n",
-    "print(gmd_graph)\n",
+    "gg_dd_edges_graph = nx.read_weighted_edgelist('data/'+graph_name+'.edgelist',delimiter=\"\\t\")  \n",
+    "print(gg_dd_edges_graph)\n",
     "\n",
-    "print(\"Before:\",gmd_graph.number_of_nodes(),gmd_graph.number_of_edges())\n",
-    "for edge in list(gmd_graph.edges):\n",
-    "    if gmd_graph.get_edge_data(edge[0],edge[1])['weight']<=0.0:\n",
-    "        gmd_graph.remove_edge(edge[0],edge[1])\n",
-    "print(\"After:\",gmd_graph.number_of_nodes(),gmd_graph.number_of_edges())\n",
+    "print(\"Before:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n",
+    "for edge in list(gg_dd_edges_graph.edges):\n",
+    "    if gg_dd_edges_graph.get_edge_data(edge[0],edge[1])['weight']<0.4:\n",
+    "        gg_dd_edges_graph.remove_edge(edge[0],edge[1])\n",
+    "print(\"After:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n",
     "\n",
-    "node2vec = Node2Vec(gmd_graph, dimensions=64, walk_length=10, num_walks=100, workers=4) \n",
+    "node2vec = Node2Vec(gg_dd_edges_graph, dimensions=64, walk_length=10, num_walks=100, workers=4) \n",
     "model = node2vec.fit(window=10, min_count=1, batch_words=4)\n",
     "print(\"finished!\")"
    ]
