performed feature concatenation

--- a/node2vec_embed.ipynb
+++ b/node2vec_embed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,20 +65,6 @@
       "Before: 1217 675456\n",
       "After: 1217 271086\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a03c0a2a15d47f78c7800a6653a678a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Computing transition probabilities:   0%|          | 0/1217 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -92,11 +78,40 @@
     "for edge in list(gg_dd_edges_graph.edges):\n",
     "    if gg_dd_edges_graph.get_edge_data(edge[0],edge[1])['weight']<0.4:\n",
     "        gg_dd_edges_graph.remove_edge(edge[0],edge[1])\n",
-    "print(\"After:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n",
-    "\n",
+    "print(\"After:\",gg_dd_edges_graph.number_of_nodes(),gg_dd_edges_graph.number_of_edges())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_edgelist(gg_dd_edges_graph, \"data/gg_dd_pos_edges.edgelist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "node2vec = Node2Vec(gg_dd_edges_graph, dimensions=64, walk_length=10, num_walks=100, workers=4) \n",
     "model = node2vec.fit(window=10, min_count=1, batch_words=4)\n",
     "print(\"finished!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pecanpy import pecanpy\n",
+    "g = pecanpy.PreComp(p=1, q=1, workers = 4)\n",
+    "g.read_edg('data/gg_dd_pos_edges.edgelist', weighted=True, directed=False)\n",
+    "walks = g.simulate_walks(walk_length=10, num_walks=100)\n",
+    "model = Word2Vec(walks, vector_size=64, window=10, min_count=1, sg=1, workers=4, batch_words=4)"
    ]
   },
   {
